--- a/Examples/emailmgr.ini.example
+++ b/Examples/emailmgr.ini.example
@@ -19,5 +19,10 @@ action = query
 [alias]
 action = querydata
 
+[adsync]
+host = 192.168.111.11
+user = email.client
+password = email.client
+
 [misc]
 debug=off
